--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
+    "react-device-detect": "^1.6.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "react-typed": "^1.0.8"
